# vectome

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish-test.yml  python-publish.yml  python-test.yml
docs/: requirements.txt
docs/source/: conf.py  installation.md  usage.md
py_template/: __init__.py  cli.py
test/: test.sh
vectome/: __init__.py  caching.py  cli.py  edits.py  genomes.py  http.py  names.py  ncbi.py  sketching.py  vectorize.py
vectome/data/: __init__.py  landmarks.yml  manifest.json  strain-list.txt
vectome/data/landmarks/group-0/: GCF_000005845.2.fna_n=5000_k=51.sig  GCF_000195955.2.fna_n=5000_k=51.sig  manifest.json
vectome/data/landmarks/group-1/: GCF_022370415.1.fna_n=5000_k=51.sig  GCF_022869665.1.fna_n=5000_k=51.sig  GCF_022869665.1.gff  GCF_030291735.1.gff  manifest.json
vectome/data/landmarks/group-2/: GCF_030291735.1.fna_n=5000_k=51.sig  manifest.json
